res/examples/valid/expr_assign_chain.eg
let c = 123;
let b: number;
let a: number;

a = b = c;
