res/examples/invalid/expr_assign_to_undefined_identifier.eg
let b: number = 123;

a = b;

// out: TypeError: `a` is not defined